grid spacing fixed

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 }
 
 img {
+  height: 300px;
   width: 100%;
-  height: 70%;
+  object-fit: cover;
 }
 
 .tab-pane.fade {
@@ -14,6 +15,7 @@ img {
 .card-header {
   display: flex;
   padding: 5px;
+  background: white;
 }
 
 .date-id {
@@ -21,6 +23,9 @@ img {
   text-align: right;
 }
 
+card {
+  background: white;
+}
 .card-body {
   padding: 0px;
 }
